--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,9 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.10.1</version>
-            <scope>test</scope>
+            <version>7.10.2</version>
         </dependency>
+
 
 
     </dependencies>
@@ -40,21 +40,12 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
-            <!--            <plugin>-->
-            <!--                <groupId>org.apache.maven.plugins</groupId>-->
-            <!--                <artifactId>maven-surefire-plugin</artifactId>-->
-            <!--                <version>${maven-surefire-plugin.version}</version>-->
-            <!--                <configuration>-->
-            <!--                    <suiteXmlFiles>-->
-            <!--                        ${maven-surefire-plugin.config.suiteXmlFilesPath.testng}/${suite}.xml-->
-            <!--                    </suiteXmlFiles>-->
-            <!--                </configuration>-->
-            <!--            </plugin>-->
         </plugins>
     </build>
+
 
 </project>
